--- a/main.html
+++ b/main.html
@@ -18,16 +18,16 @@
                         <li class="li-nav"> <a href="main.html"> Inicio </a> </li>  
                     </div>
                     <div class="col-lg-2  col-md-6 col-sm-12 ">
-                        <li class="li-nav"> <a href="acerca_de_mi.html">Acerca de</a> </li>
+                        <li class="li-nav"> <a href="/html/acerca_de_mi.html">Acerca de</a> </li>
                     </div>
                     <div class="col-lg-2  col-md-6 col-sm-12 ">
-                        <li class="li-nav"> <a href="blog.html"> blog </a> </li>    
+                        <li class="li-nav"> <a href="/html/blog.html"> blog </a> </li>    
                     </div> 
                     <div class="col-lg-2  col-md-6 col-sm-12 ">  
-                        <li class="li-nav"> <a href="proyectos.html"> Proyectos </a> </li> 
+                        <li class="li-nav"> <a href="/html/proyectos.html"> Proyectos </a> </li> 
                     </div>
                     <div class="col-lg-2  col-md-6 col-sm-12 ">  
-                        <li class="li-nav"> <a href="contacto.html"> contacto </a> </li>
+                        <li class="li-nav"> <a href="/html/contacto.html"> contacto </a> </li>
                     </div>
                 </div> <!--fin row-->
             </ul> <!--fin ul-->
