--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/">
     
 </head>
 <body>
@@ -18,16 +18,16 @@
                         <li class="li-nav"> <a href="main.html"> Inicio </a> </li>  
                     </div>
                     <div class="col-lg-2  col-md-6 col-sm-12 ">
-                        <li class="li-nav"> <a href="/html/acerca_de_mi.html">Acerca de</a> </li>
+                        <li class="li-nav"> <a href="html/acerca_de_mi.html">Acerca de</a> </li>
                     </div>
                     <div class="col-lg-2  col-md-6 col-sm-12 ">
-                        <li class="li-nav"> <a href="/html/blog.html"> blog </a> </li>    
+                        <li class="li-nav"> <a href="html/blog.html"> blog </a> </li>    
                     </div> 
                     <div class="col-lg-2  col-md-6 col-sm-12 ">  
-                        <li class="li-nav"> <a href="/html/proyectos.html"> Proyectos </a> </li> 
+                        <li class="li-nav"> <a href="html/proyectos.html"> Proyectos </a> </li> 
                     </div>
                     <div class="col-lg-2  col-md-6 col-sm-12 ">  
-                        <li class="li-nav"> <a href="/html/contacto.html"> contacto </a> </li>
+                        <li class="li-nav"> <a href="html/contacto.html"> contacto </a> </li>
                     </div>
                 </div> <!--fin row-->
             </ul> <!--fin ul-->
