--- a/html/acerca_de_mi.html
+++ b/html/acerca_de_mi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acerca de mi</title>
+    <title>Sobre mi</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
@@ -14,19 +14,19 @@
             <ul class="ul-nav"> 
                 <div class="row">
                     <div class="col-lg-2  col-md-6 col-sm-12 "> 
-                        <li class="li-nav"> <a href="../main.html"> Inicio </a> </li>  
+                        <li class="li-nav"> <a href="../index.html">Inicio</a></li>  
                     </div>
                     <div class="col-lg-2  col-md-6 col-sm-12 ">
-                        <li class="li-nav"> <a href="acerca_de_mi.html">Acerca de</a> </li>
+                        <li class="li-nav"> <a href="acerca_de_mi.html">Sobre mi</a></li>
                     </div>
                     <div class="col-lg-2  col-md-6 col-sm-12 ">
-                        <li class="li-nav"> <a href="blog.html"> blog </a> </li>    
+                        <li class="li-nav"> <a href="blog.html">Blog</a></li>    
                     </div> 
                     <div class="col-lg-2  col-md-6 col-sm-12 ">  
-                        <li class="li-nav"> <a href="proyectos.html"> Proyectos </a> </li> 
+                        <li class="li-nav"> <a href="proyectos.html">Proyectos</a></li> 
                     </div>
                     <div class="col-lg-2  col-md-6 col-sm-12 ">  
-                        <li class="li-nav"> <a href="contacto.html"> contacto </a> </li>
+                        <li class="li-nav"> <a href="contacto.html">Contacto</a></li>
                     </div>
                 </div> <!--fin row-->
             </ul> <!--fin ul-->
@@ -34,36 +34,13 @@
 
     </nav> <!--fin nav-->
     <header>
-
-        <div class="container">
-            <ul class="ul-header"> 
+            <div class="container">
                 <div class="row">
-                    <div class="col-lg-2  col-md-6 col-sm-12 "> 
-                        <li class="li-header"> <img src="../img/header/html-logo.png" alt=""> <p>Html</p> </li>  
-                    </div>
-                    <div class="col-lg-2  col-md-6 col-sm-12 ">
-                        <li class="li-header"> <img src="../img/header/CSS-Logo.png.png" alt=""> <p>Css</p> </li>
-                    </div>
-                    <div class="col-lg-2  col-md-6 col-sm-12 ">
-                        <li class="li-header"> <img src="../img/header/python-logo.png" alt=""> <p>Python</p> </li>    
-                    </div> 
-                    <div class="col-lg-2  col-md-6 col-sm-12 ">  
-                        <li class="li-header"> <img src="../img/header/c-logo.png" alt=""> <p>C</p> </li>  
-                    </div>
-                    <div class="col-lg-2  col-md-6 col-sm-12 "> 
-                        <li class="li-header"> <img src="../img/header/cplusplus-logo.png" alt=""> <p>C++</p></li>  
-                    </div>
-                    <div class="col-lg-2  col-md-6 col-sm-12 "> 
-                        <li class="li-header"> <img src="../img/header/sql-logo.jpg" alt=""><p>Sql</p></li>  
-                    </div>
-                </div> <!--fin row-->
-            </ul> <!--fin ul-->
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 "> 
-                    <h1>Acerca de mi</h1>
-                </div>
-            </div><!--fin row-->
-        </div> <!--fin container-->
+                    <div class="col-lg-12  col-md-12 col-sm-12 "> 
+                        <h1>Sobre mi</h1>
+                    </div><!--fin col-->
+                </div><!--fin row -->
+            </div><!--fin container-->
     </header> <!--fin header-->
     <main>
         <article>
@@ -79,7 +56,7 @@
 
     </main>
     <footer>
-        "Desarrollado por Juan Herrera"
+        <b>"Desarrollado por Juan Herrera"</b>        
         <a href=""><img src="../img/icons/facebook-brands.svg" alt=""></a>
         <a href=""><img src="../img/icons/instagram-square-brands.svg" alt=""></a>
         <a href=""><img src="../img/icons/twitter-square-brands.svg" alt=""></a>
