--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -43,7 +43,36 @@
         </div><!--fin container-->
 </header> <!--fin header-->
     <main>
-
+        <table>
+            <thead>
+                <tr>
+                    <th>Titutlo</th>
+                    <th>Descripcion</th>
+                    <th>Lenguajes</th>
+                    <th>Creacion</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><a href="https://github.com/juanNH/Web-personal" target="_blank"><img src="../img/icons/github-brands.svg" alt=""> Web personal</a></td>
+                    <td>Mi primer sitio web</td>
+                    <td>Html,Css</td>
+                    <td>April 25, 2021</td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/juanNH/Mapa-de-ET-de-CABA" target="_blank"><img src="../img/icons/github-brands.svg" target="_blank" alt="">Mapa de ET de CABA</a></td>
+                    <td>Una aplicacion que permite visualizar algunas de las escuelas tecnicas de caba mediante un mapa generado por Html</td>
+                    <td>Html,Python</td>    
+                    <td>April 11, 2020</td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/juanNH/Basic-picture-filter-with-python" target="_blank"><img src="../img/icons/github-brands.svg" alt="">Basic picture filter</a></td>
+                    <td>Una aplicacion que permite tomar una imagen para aumentar el brillo, contraste, entre otros y guardarla</td>
+                    <td>Python</td>
+                    <td>April 4, 2020</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
     <footer>
         <b>"Desarrollado por Juan Herrera"</b>        
