--- a/html/contacto.html
+++ b/html/contacto.html
@@ -77,7 +77,7 @@
                                 <textarea type="text" class="" id="" placeholder="Mensaje" name="message"
                                     required></textarea>
                             </div>
-                            <button type="submit">Enviar</button>
+                            <button id="boton-contacto" type="submit">Enviar</button>
                         </form>
                     </article>
                 </div>
