Nav for all pages

--- a/html/acerca_de_mi.html
+++ b/html/acerca_de_mi.html
@@ -9,30 +9,14 @@
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    <nav>
-        <div class="container">
-            <ul class="ul-nav"> 
-                <div class="row">
-                    <div class="col-lg-2  col-md-6 col-sm-12 "> 
-                        <li class="li-nav"> <a href="../index.html">Inicio</a></li>  
-                    </div>
-                    <div class="col-lg-2  col-md-6 col-sm-12 ">
-                        <li class="li-nav"> <a href="acerca_de_mi.html">Sobre mi</a></li>
-                    </div>
-                    <div class="col-lg-2  col-md-6 col-sm-12 ">
-                        <li class="li-nav"> <a href="blog.html">Blog</a></li>    
-                    </div> 
-                    <div class="col-lg-2  col-md-6 col-sm-12 ">  
-                        <li class="li-nav"> <a href="proyectos.html">Proyectos</a></li> 
-                    </div>
-                    <div class="col-lg-2  col-md-6 col-sm-12 ">  
-                        <li class="li-nav"> <a href="contacto.html">Contacto</a></li>
-                    </div>
-                </div> <!--fin row-->
-            </ul> <!--fin ul-->
-        </div> <!--fin container-->
-
-    </nav> <!--fin nav-->
+    <nav class="nav-pc" id="nav">
+        <a href="../index.html" class="active">Inicio</a>
+        <a href="contacto.html" class="resto" >Contacto</a>
+        <a href="acerca_de_mi.html" class="resto">Sobre mi</a>
+        <a href="blog.html" class="resto" >Blog</a>
+        <a href="proyectos.html" class="resto" >Proyectos</a>
+        <a href="javascript:void(0);" style="font-size:15px;" class="menu" onclick="myFunction()">&#9776;</a>
+    </nav>
     <header>
             <div class="container">
                 <div class="row">
