--- a/index.html
+++ b/index.html
@@ -10,30 +10,14 @@
     
 </head>
 <body>
-    <nav>
-        <div class="container">
-            <ul class="ul-nav"> 
-                <div class="row">
-                    <div class="col-lg-2  col-md-6 col-sm-12 "> 
-                        <li class="li-nav"> <a href="index.html">Inicio</a></li>  
-                    </div>
-                    <div class="col-lg-2  col-md-6 col-sm-12 ">
-                        <li class="li-nav"> <a href="html/acerca_de_mi.html">Sobre mi</a></li>
-                    </div>
-                    <div class="col-lg-2  col-md-6 col-sm-12 ">
-                        <li class="li-nav"> <a href="html/blog.html">Blog</a></li>    
-                    </div> 
-                    <div class="col-lg-2  col-md-6 col-sm-12 "> 
-                        <li class="li-nav"> <a href="html/proyectos.html">Proyectos</a></li> 
-                    </div>
-                    <div class="col-lg-2  col-md-6 col-sm-12 ">  
-                        <li class="li-nav"> <a href="html/contacto.html">Contacto</a></li>
-                    </div>
-                </div> <!--fin row-->
-            </ul> <!--fin ul-->
-        </div> <!--fin container-->
-
-    </nav> <!--fin nav-->
+    <nav class="nav-pc" id="nav">
+        <a href="index.html" class="active">Inicio</a>
+        <a href="html/contacto.html" class="resto" >Contacto</a>
+        <a href="html/acerca_de_mi.html" class="resto">Sobre mi</a>
+        <a href="html/blog.html" class="resto" >Blog</a>
+        <a href="html/proyectos.html" class="resto" >Proyectos</a>
+        <a href="javascript:void(0);" style="font-size:15px;" class="menu" onclick="myFunction()">&#9776;</a>
+    </nav>
     <header>
         <div class="container">
             <div class="row">
