--- a/html/contacto.html
+++ b/html/contacto.html
@@ -90,6 +90,16 @@
         <a href=""><img src="../img/icons/twitter-square-brands.svg" alt=""></a>
         <a href=""><img src="../img/icons/linkedin-brands.svg" alt=""></a>
     </footer>
+    <script>
+        function myFunction() {
+          var x = document.getElementById("nav");
+          if (x.className === "nav-pc") {
+            x.className += " responsive";
+          } else {
+            x.className = "nav-pc";
+          }
+        }
+        </script>
 </body>
 
 </html>
