nav bar proyect responsive solved

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <body>
     <nav class="nav-pc" id="nav">
         <a href="index.html" class="active">Inicio</a>
+        <a href="html/proyectos.html" class="resto" id="hidden-noresponsive">Proyectos</a>
         <a href="html/contacto.html" class="resto" >Contacto</a>
         <a href="html/acerca_de_mi.html" class="resto">Sobre mi</a>
         <a href="html/blog.html" class="resto" >Blog</a>
-        <a href="html/proyectos.html" class="resto" >Proyectos</a>
+        <a href="html/proyectos.html" class="resto" id="hidden-responsive" >Proyectos</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="menu" onclick="myFunction()">&#9776;</a>
     </nav>
     <header>
