index mejorado, index sin boostrap, sobre mi completo y responsive, bugs de nav ,eliminacion de codigo redundante, carousel listo para usar.
hay texto de prueba e imagenes. Siguiente acomodar blog

--- a/html/blog.html
+++ b/html/blog.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    <nav class="nav-pc" id="nav">
+    <nav class="nav-pc" id="navi">
         <a href="../index.html" class="active">Inicio</a>
         <a href="proyectos.html" class="resto" id="hidden-noresponsive">Proyectos</a>
         <a href="contacto.html" class="resto" >Contacto</a>
@@ -79,7 +79,7 @@
     </footer>
     <script>
         function myFunction() {
-          var x = document.getElementById("nav");
+          var x = document.getElementById("navi");
           if (x.className === "nav-pc") {
             x.className += " responsive";
           } else {
