--- a/html/blog.html
+++ b/html/blog.html
@@ -9,18 +9,39 @@
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    <nav class="nav-pc" id="navi">
-        <a href="../index.html" class="active">Inicio</a>
-        <a href="proyectos.html" class="resto" id="hidden-noresponsive">Proyectos</a>
-        <a href="contacto.html" class="resto" >Contacto</a>
-        <a href="acerca_de_mi.html" class="resto">Sobre mi</a>
-        <a href="blog.html" class="resto" >Blog</a>
-        <a href="proyectos.html" class="resto" id="hidden-responsive" >Proyectos</a>
-        <a href="javascript:void(0);" style="font-size:15px;" class="menu" onclick="myFunction()">&#9776;</a>
-    </nav>
+    <nav>
+        <div class="container">
+            <ul class="ul-nav"> 
+                <div class="row">
+                    <div class="col-lg-2  col-md-6 col-sm-12 "> 
+                        <li class="li-nav"> <a href="../index.html">Inicio</a></li>  
+                    </div>
+                    <div class="col-lg-2  col-md-6 col-sm-12 ">
+                        <li class="li-nav"> <a href="acerca_de_mi.html">Sobre mi</a></li>
+                    </div>
+                    <div class="col-lg-2  col-md-6 col-sm-12 ">
+                        <li class="li-nav"> <a href="blog.html">Blog</a></li>    
+                    </div> 
+                    <div class="col-lg-2  col-md-6 col-sm-12 ">  
+                        <li class="li-nav"> <a href="proyectos.html">Proyectos</a></li> 
+                    </div>
+                    <div class="col-lg-2  col-md-6 col-sm-12 ">  
+                        <li class="li-nav"> <a href="contacto.html">Contacto</a></li>
+                    </div>
+                </div> <!--fin row-->
+            </ul> <!--fin ul-->
+        </div> <!--fin container-->
+
+    </nav> <!--fin nav-->
     <header>
-        <h1>Blog</h1>
-    </header> <!--fin header-->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12  col-md-12 col-sm-12 "> 
+                    <h1>Blog</h1>
+                </div><!--fin col-->
+            </div><!--fin row -->
+        </div><!--fin container-->
+</header> <!--fin header-->
     <main>
         <div class="container">
             <div class="row">
@@ -77,15 +98,5 @@
         <a href=""><img src="../img/icons/twitter-square-brands.svg" alt=""></a>
         <a href=""><img src="../img/icons/linkedin-brands.svg" alt=""></a>
     </footer>
-    <script>
-        function myFunction() {
-          var x = document.getElementById("navi");
-          if (x.className === "nav-pc") {
-            x.className += " responsive";
-          } else {
-            x.className = "nav-pc";
-          }
-        }
-        </script>
 </body>
 </html>
