--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -9,49 +9,41 @@
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    <nav class="nav-pc" id="navi">
-        <a href="../index.html" class="active">Inicio</a>
-        <a href="proyectos.html" class="resto" id="hidden-noresponsive">Proyectos</a>
-        <a href="contacto.html" class="resto" >Contacto</a>
-        <a href="acerca_de_mi.html" class="resto">Sobre mi</a>
-        <a href="blog.html" class="resto" >Blog</a>
-        <a href="proyectos.html" class="resto" id="hidden-responsive" >Proyectos</a>
-        <a href="javascript:void(0);" style="font-size:15px;" class="menu" onclick="myFunction()">&#9776;</a>
-    </nav>
-    <header> 
-        <h1>Proyectos</h1>
-    </header> <!--fin header-->
+    <nav>
+        <div class="container">
+            <ul class="ul-nav"> 
+                <div class="row">
+                    <div class="col-lg-2  col-md-6 col-sm-12 "> 
+                        <li class="li-nav"> <a href="../index.html">Inicio</a></li>  
+                    </div>
+                    <div class="col-lg-2  col-md-6 col-sm-12 ">
+                        <li class="li-nav"> <a href="acerca_de_mi.html">Sobre mi</a></li>
+                    </div>
+                    <div class="col-lg-2  col-md-6 col-sm-12 ">
+                        <li class="li-nav"> <a href="blog.html">Blog</a></li>    
+                    </div> 
+                    <div class="col-lg-2  col-md-6 col-sm-12 ">  
+                        <li class="li-nav"> <a href="proyectos.html">Proyectos</a></li> 
+                    </div>
+                    <div class="col-lg-2  col-md-6 col-sm-12 ">  
+                        <li class="li-nav"> <a href="contacto.html">Contacto</a></li>
+                    </div>
+                </div> <!--fin row-->
+            </ul> <!--fin ul-->
+        </div> <!--fin container-->
+
+    </nav> <!--fin nav-->
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12  col-md-12 col-sm-12 "> 
+                    <h1>Proyectos</h1>
+                </div><!--fin col-->
+            </div><!--fin row -->
+        </div><!--fin container-->
+</header> <!--fin header-->
     <main>
-        <table>
-            <thead>
-                <tr>
-                    <th>Titutlo</th>
-                    <th>Descripcion</th>
-                    <th>Lenguajes</th>
-                    <th>Creacion</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><a href="https://github.com/juanNH/Web-personal" target="_blank"><img src="../img/icons/github-brands.svg" alt=""> Web personal</a></td>
-                    <td>Mi primer sitio web</td>
-                    <td>Html,Css</td>
-                    <td>April 25, 2021</td>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/juanNH/Mapa-de-ET-de-CABA" target="_blank"><img src="../img/icons/github-brands.svg" target="_blank" alt="">Mapa de ET de CABA</a></td>
-                    <td>Una aplicacion que permite visualizar algunas de las escuelas tecnicas de caba mediante un mapa generado por Html</td>
-                    <td>Html,Python</td>    
-                    <td>April 11, 2020</td>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/juanNH/Basic-picture-filter-with-python" target="_blank"><img src="../img/icons/github-brands.svg" alt="">Basic picture filter</a></td>
-                    <td>Una aplicacion que permite tomar una imagen para aumentar el brillo, contraste, entre otros y guardarla</td>
-                    <td>Python</td>
-                    <td>April 4, 2020</td>
-                </tr>
-            </tbody>
-        </table>
+
     </main>
     <footer>
         <b>"Desarrollado por Juan Herrera"</b>        
@@ -60,15 +52,5 @@
         <a href=""><img src="../img/icons/twitter-square-brands.svg" alt=""></a>
         <a href=""><img src="../img/icons/linkedin-brands.svg" alt=""></a>
     </footer>
-    <script>
-        function myFunction() {
-          var x = document.getElementById("navi");
-          if (x.className === "nav-pc") {
-            x.className += " responsive";
-          } else {
-            x.className = "nav-pc";
-          }
-        }
-        </script>
 </body>
 </html>
