--- a/html/acerca_de_mi.html
+++ b/html/acerca_de_mi.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="nav-pc" id="navi">
         <a href="../index.html" class="active">Inicio</a>
-        <a href="proyectos.html" class="resto" id="hidden-noresponsive">Proyectos</a>
+        <a href="proyectos.html" class="resto hidden-noresponsive">Proyectos</a>
         <a href="contacto.html" class="resto" >Contacto</a>
         <a href="acerca_de_mi.html" class="resto">Sobre mi</a>
         <a href="blog.html" class="resto" >Blog</a>
@@ -19,15 +19,16 @@
         <a href="javascript:void(0);" style="font-size:15px;" class="menu" onclick="myFunction()">&#9776;</a>
     </nav>
     <header> 
-        <h1>Sobre mi</h1>
+        <h1 class="titulo" >Sobre mi</h1>
     </header> <!--fin header-->
     <main>
             <article>
-                <h3>¿Quien soy?</h3>
-                <p>Hola soy Juan, tengo 20 años soy un apasionado de la tecnología. Fanático de la programación web y de la ciencia de datos. Actualmente estoy cursando Ingeniería  informática en la universidad de Buenos Aires, aprendiendo mediante cursos y de manera autodidacta sobre lo que me gusta.</p>                <h3>Un poco de mi del pasado :P</h3>
-                <p>De pequeño siempre me atrajeron las computadoras y gracias a eso tuve claro que quería estudiar. Tuve la suerte de poder entrar en la secundaria que quería, la cual tenia especializaciones técnicas. Principalmente había ido por la especialidad de Computación en la cual aprendí sobre la programación, redes informáticas, organización de procesos, etc. Esto me abrió el panorama del mundo de la informática  la cual me permitió decidir a que me quería dedicar en el futuro.</p>
-                <h3>¿Que estoy haciendo actualmente?</h3>
-                <p>Actualmente no estoy buscando trabajo de manera activa. Uso el tiempo para seguir avanzando con la universidad  ,mejorar como programador con pequeños proyectos y mejorar mis idiomas, actualmente hablo Español e Ingles de manera fluida y estoy en proceso de aprender Portugués.</p>
+                <h3 class="titulo-text">¿Quien soy?</h3>
+                <p class="text">Hola soy Juan, tengo 20 años soy un apasionado de la tecnología. Fanático de la programación web y de la ciencia de datos. Actualmente estoy cursando Ingeniería  informática en la universidad de Buenos Aires, aprendiendo mediante cursos y de manera autodidacta sobre lo que me gusta.</p> 
+                <h3 class="titulo-text">Un poco de mi del pasado :P</h3>
+                <p class="text">De pequeño siempre me atrajeron las computadoras y gracias a eso tuve claro que quería estudiar. Tuve la suerte de poder entrar en la secundaria que quería, la cual tenia especializaciones técnicas. Principalmente había ido por la especialidad de Computación en la cual aprendí sobre la programación, redes informáticas, organización de procesos, etc. Esto me abrió el panorama del mundo de la informática  la cual me permitió decidir a que me quería dedicar en el futuro.</p>
+                <h3 class="titulo-text">¿Que estoy haciendo actualmente?</h3>
+                <p class="text">Actualmente no estoy buscando trabajo de manera activa. Uso el tiempo para seguir avanzando con la universidad  ,mejorar como programador con pequeños proyectos y mejorar mis idiomas, actualmente hablo Español e Ingles de manera fluida y estoy en proceso de aprender Portugués.</p>
             </article>
     </main>
     <footer>
