--- a/html/contacto.html
+++ b/html/contacto.html
@@ -22,7 +22,7 @@
         <a href="javascript:void(0);" style="font-size:15px;" class="menu" onclick="myFunction()">&#9776;</a>
     </nav>
     <header>
-        <h1>Contacto</h1>
+        <h1 class="titulo">Contacto</h1>
     </header>
     <!--fin header-->
     <main>
