--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="nav-pc" id="navi">
         <a href="../index.html" class="active">Inicio</a>
-        <a href="proyectos.html" class="resto" id="hidden-noresponsive">Proyectos</a>
+        <a href="proyectos.html" class="resto hidden-noresponsive">Proyectos</a>
         <a href="contacto.html" class="resto" >Contacto</a>
         <a href="acerca_de_mi.html" class="resto">Sobre mi</a>
         <a href="blog.html" class="resto" >Blog</a>
