--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
 <body id="body-index">
     <nav class="nav-pc" id="navi">
         <a href="index.html" class="active">Inicio</a>
-        <a href="html/proyectos.html" class="resto" id="hidden-noresponsive">Proyectos</a>
+        <a href="html/proyectos.html" class="resto hidden-noresponsive">Proyectos</a>
         <a href="html/contacto.html" class="resto" >Contacto</a>
         <a href="html/acerca_de_mi.html" class="resto">Sobre mi</a>
         <a href="html/blog.html" class="resto" >Blog</a>
         <a href="html/proyectos.html" class="resto" id="hidden-responsive" >Proyectos</a>
+        
         <a href="javascript:void(0);" style="font-size:15px;" class="menu" onclick="myFunction()">&#9776;</a>
     </nav>
     <header id="header-index">
-        <h1>Inicio</h1>
+        <h1 class="titulo">Inicio</h1>
     </header> <!--fin header-->
     <main>
         <div id="main-div">    
             <h2 class="nombre" id="nombre1">Soy Juan Herrera</h2>
-            <h2 class="nombre" id="nombre2">Engineering student / Data analyst / Web programer / Autodidact</h2>
+            <h2 class="nombre" id="nombre2">Esta es mi web :D</h2>
         </div>
         <div class="carroza">
             <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
@@ -50,10 +51,10 @@
             </div>
         </div>
         <article id="index-art">
-            <h3>Distintas cosas en las que estoy trabajando</h3>
+            <h3 class="titulo-text-main" >Distintas cosas en las que estoy trabajando</h3>
                 <ul>
-                    <li>Mejorar la pagina web</li>
-                    <li>Texto de prueba</li>
+                    <li> <p  class="text-main"> Mejorar la pagina web </p></li>
+                    <li> <p  class="text-main">Texto de prueba </p></li>
                 </ul>
                 <a href="https://github.com/juanNH/Web-personal" target="_blank"><img src="img/icons/github-brands.svg" alt="">Repositorio</a>
         </article>
