--- a/html/blog.html
+++ b/html/blog.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="nav-pc" id="navi">
         <a href="../index.html" class="active">Inicio</a>
-        <a href="proyectos.html" class="resto" id="hidden-noresponsive">Proyectos</a>
+        <a href="proyectos.html" class="resto hidden-noresponsive">Proyectos</a>
         <a href="contacto.html" class="resto" >Contacto</a>
         <a href="acerca_de_mi.html" class="resto">Sobre mi</a>
         <a href="blog.html" class="resto" >Blog</a>
@@ -19,7 +19,7 @@
         <a href="javascript:void(0);" style="font-size:15px;" class="menu" onclick="myFunction()">&#9776;</a>
     </nav>
     <header>
-        <h1>Blog</h1>
+        <h1 class="titulo">Blog</h1>
     </header> <!--fin header-->
     <main>
         <div class="container">
