--- a/html/acerca_de_mi.html
+++ b/html/acerca_de_mi.html
@@ -15,7 +15,7 @@
         <a href="contacto.html" class="resto" >Contacto</a>
         <a href="acerca_de_mi.html" class="resto">Sobre mi</a>
         <a href="blog.html" class="resto" >Blog</a>
-        <a href="proyectos.html" class="resto" id="hidden-responsive" >Proyectos</a>
+        <a href="proyectos.html" class="resto hidden-responsive" >Proyectos</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="menu" onclick="myFunction()">&#9776;</a>
     </nav>
     <header> 
