--- a/html/contacto.html
+++ b/html/contacto.html
@@ -57,11 +57,11 @@
                     <article class="article-contacto" id="article-contacto-redes">
                         <H2>Tambien puedes encontrarme en mis redes sociales</H2>
                         <ul>
-                            <li><a href="">Facebook<img src="../img/icons/facebook-brands.svg" alt=""></a> </li>
-                            <li><a href="">Instagram<img src="../img/icons/instagram-square-brands.svg" alt=""></a>
+                            <li><a target="_blank" href="https://www.facebook.com/JuannHerrerad-100313778901414">Facebook<img src="../img/icons/facebook-brands.svg" alt=""></a> </li>
+                            <li><a target="_blank" href="https://www.instagram.com/juannherrerad/">Instagram<img src="../img/icons/instagram-square-brands.svg" alt=""></a>
                             </li>
-                            <li><a href="">Twitter<img src="../img/icons/twitter-square-brands.svg" alt=""></a> </li>
-                            <li><a href="">Linkedin<img src="../img/icons/linkedin-brands.svg" alt=""></a> </li>
+                            <li><a target="_blank" href="https://twitter.com/JuanNHerreraD">Twitter<img src="../img/icons/twitter-square-brands.svg" alt=""></a> </li>
+                            <li><a target="_blank" href="https://www.linkedin.com/in/juannherrerad/">Linkedin<img src="../img/icons/linkedin-brands.svg" alt=""></a> </li>
                         </ul>
                     </article>
                 </div>
@@ -77,10 +77,10 @@
 
     <footer>
         <b>"Desarrollado por Juan Herrera"</b>        
-        <a href=""><img src="../img/icons/facebook-brands.svg" alt=""></a>
-        <a href=""><img src="../img/icons/instagram-square-brands.svg" alt=""></a>
-        <a href=""><img src="../img/icons/twitter-square-brands.svg" alt=""></a>
-        <a href=""><img src="../img/icons/linkedin-brands.svg" alt=""></a>
+        <a target="_blank" href="https://www.facebook.com/JuannHerrerad-100313778901414" ><img src="../img/icons/facebook-brands.svg" alt=""></a>
+        <a target="_blank" href="https://www.instagram.com/juannherrerad/"><img src="../img/icons/instagram-square-brands.svg" alt=""></a>
+        <a target="_blank" href="https://twitter.com/JuanNHerreraD"><img src="../img/icons/twitter-square-brands.svg" alt=""></a>
+        <a target="_blank" href="https://www.linkedin.com/in/juannherrerad/"><img src="../img/icons/linkedin-brands.svg" alt="" ></a>
     </footer>
     <script>
         function myFunction() {
