--- a/html/acerca_de_mi.html
+++ b/html/acerca_de_mi.html
@@ -33,10 +33,10 @@
     </main>
     <footer>
         <b>"Desarrollado por Juan Herrera"</b>        
-        <a href=""><img src="../img/icons/facebook-brands.svg" alt=""></a>
-        <a href=""><img src="../img/icons/instagram-square-brands.svg" alt=""></a>
-        <a href=""><img src="../img/icons/twitter-square-brands.svg" alt=""></a>
-        <a href=""><img src="../img/icons/linkedin-brands.svg" alt=""></a>
+        <a target="_blank" href="https://www.facebook.com/JuannHerrerad-100313778901414" ><img src="../img/icons/facebook-brands.svg" alt=""></a>
+        <a target="_blank" href="https://www.instagram.com/juannherrerad/"><img src="../img/icons/instagram-square-brands.svg" alt=""></a>
+        <a target="_blank" href="https://twitter.com/JuanNHerreraD"><img src="../img/icons/twitter-square-brands.svg" alt=""></a>
+        <a target="_blank" href="https://www.linkedin.com/in/juannherrerad/"><img src="../img/icons/linkedin-brands.svg" alt=""></a>
     </footer>
     <script>
         function myFunction() {
