Contacto with no  bootstrap
no BS in contacto. Responsive, solution main overflow-x.

--- a/html/acerca_de_mi.html
+++ b/html/acerca_de_mi.html
@@ -22,7 +22,7 @@
         <h1 class="titulo" >Sobre mi</h1>
     </header> <!--fin header-->
     <main>
-            <article>
+            <article class="articlea">
                 <h3 class="titulo-text">¿Quien soy?</h3>
                 <p class="text">Hola soy Juan, tengo 20 años soy un apasionado de la tecnología. Fanático de la programación web y de la ciencia de datos. Actualmente estoy cursando Ingeniería  informática en la universidad de Buenos Aires, aprendiendo mediante cursos y de manera autodidacta sobre lo que me gusta.</p> 
                 <h3 class="titulo-text">Un poco de mi del pasado :P</h3>
