--- a/html/contacto.html
+++ b/html/contacto.html
@@ -26,52 +26,44 @@
     </header>
     <!--fin header-->
     <main>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-12 col-sm-12 ">
-                    <article class="article-contacto">
-                        <form action="" method="post">
-                            <div class="formulario">
-                                <label for="name">Nombre:</label>
-                                <input type="name" class="" id="" placeholder="Nombre" name="name" required>
-                            </div>
-                            <div class="formulario">
-                                <label for="email">Email:</label>
-                                <input type="email" class="" id="" placeholder="Email" name="email" required>
-                            </div>
-                            <div class="formulario">
-                                <label for="telefono">Telefono(opcional):</label>
-                                <input type="number" class="" id="" placeholder="Telefono(opcional)"
-                                    name="telefono">
-                            </div>
-                            <div class="formulario">
-                                <label for="description">Mensaje:</label>
-                                <textarea type="text" class="" id="" placeholder="Mensaje" name="message"
-                                    required></textarea>
-                            </div>
-                            <button id="boton-contacto" type="submit">Enviar</button>
-                        </form>
-                    </article>
-                </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 ">
-                    <article class="article-contacto" id="article-contacto-redes">
-                        <H2>Tambien puedes encontrarme en mis redes sociales</H2>
-                        <ul>
-                            <li><a target="_blank" href="https://www.facebook.com/JuannHerrerad-100313778901414">Facebook<img src="../img/icons/facebook-brands.svg" alt=""></a> </li>
-                            <li><a target="_blank" href="https://www.instagram.com/juannherrerad/">Instagram<img src="../img/icons/instagram-square-brands.svg" alt=""></a>
-                            </li>
-                            <li><a target="_blank" href="https://twitter.com/JuanNHerreraD">Twitter<img src="../img/icons/twitter-square-brands.svg" alt=""></a> </li>
-                            <li><a target="_blank" href="https://www.linkedin.com/in/juannherrerad/">Linkedin<img src="../img/icons/linkedin-brands.svg" alt=""></a> </li>
-                        </ul>
-                    </article>
-                </div>
-            </div>
+        <div id="maindivar1">
+            <article class="article-contacto">
+                <form action="" method="post">
+                    <div class="formulario">
+                        <label for="name">Nombre:</label>
+                        <input type="name" class="" id="" placeholder="Nombre" name="name" required>
+                    </div>
+                    <div class="formulario">
+                        <label for="email">Email:</label>
+                        <input type="email" class="" id="" placeholder="Email" name="email" required>
+                    </div>
+                    <div class="formulario">
+                        <label for="telefono">Telefono(opcional):</label>
+                        <input type="number" class="" id="" placeholder="Telefono(opcional)"
+                            name="telefono">
+                    </div>
+                    <div class="formulario">
+                        <label for="description">Mensaje:</label>
+                        <textarea type="text" class="" id="" placeholder="Mensaje" name="message"
+                            required></textarea>
+                    </div>
+                    <button id="boton-contacto" type="submit">Enviar</button>
+                </form>
+            </article>
         </div>
-        <!--fin row-->
+        <div id="maindivar2">
+            <article class="article-contacto" id="article-contacto-redes">
+                <h2>Tambien puedes encontrarme en mis redes sociales</h2>
+                <ul>
+                    <li><a target="_blank" href="https://www.facebook.com/JuannHerrerad-100313778901414">Facebook<img src="../img/icons/facebook-brands.svg" alt=""></a> </li>
+                    <li><a target="_blank" href="https://www.instagram.com/juannherrerad/">Instagram<img src="../img/icons/instagram-square-brands.svg" alt=""></a>
+                    </li>
+                    <li><a target="_blank" href="https://twitter.com/JuanNHerreraD">Twitter<img src="../img/icons/twitter-square-brands.svg" alt=""></a> </li>
+                    <li><a target="_blank" href="https://www.linkedin.com/in/juannherrerad/">Linkedin<img src="../img/icons/linkedin-brands.svg" alt=""></a> </li>
+                </ul>
+            </article>
         </div>
-        <!--fin container-->
-    </main>
-    <!--fin main-->
+    </main><!--fin main-->
 
 
 
