--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -19,7 +19,7 @@
         <a href="javascript:void(0);" style="font-size:15px;" class="menu" onclick="myFunction()">&#9776;</a>
     </nav>
     <header> 
-        <h1>Proyectos</h1>
+        <h1 class="titulo">Proyectos</h1>
     </header> <!--fin header-->
     <main>
         <table>
