--- a/html/contacto.html
+++ b/html/contacto.html
@@ -31,20 +31,20 @@
                 <form action="" method="post">
                     <div class="formulario">
                         <label for="name">Nombre:</label>
-                        <input type="name" class="" id="" placeholder="Nombre" name="name" required>
+                        <input type="name" class="input-contacto" placeholder="Nombre" name="name" required>
                     </div>
                     <div class="formulario">
                         <label for="email">Email:</label>
-                        <input type="email" class="" id="" placeholder="Email" name="email" required>
+                        <input type="email" class="input-contacto" placeholder="Email" name="email" required>
                     </div>
                     <div class="formulario">
                         <label for="telefono">Telefono(opcional):</label>
-                        <input type="number" class="" id="" placeholder="Telefono(opcional)"
+                        <input type="number" class="input-contacto" placeholder="Telefono(opcional)"
                             name="telefono">
                     </div>
                     <div class="formulario">
                         <label for="description">Mensaje:</label>
-                        <textarea type="text" class="" id="" placeholder="Mensaje" name="message"
+                        <textarea type="text" class="textarea-contacto" placeholder="Mensaje" name="message"
                             required></textarea>
                     </div>
                     <button id="boton-contacto" type="submit">Enviar</button>
