fix size letters in mobile

--- a/html/blog.html
+++ b/html/blog.html
@@ -26,9 +26,9 @@
             <a class=a-blog href="blog/blog1.html">
                 <div id="maindivar1-blog"> 
                     <section class="blog-section">
-                        <h3>Pagina de pruebas de layout</h3>
+                        <h3 class="titulo-text">Pagina de pruebas de layout</h3>
                         <img src="../img/blog/blog1/foto-test.jpg" alt="">
-                        <p>Esta es la pagina donde he probado todos los cambios de layout general</p>
+                        <p class="text">Esta es la pagina donde he probado todos los cambios de layout general</p>
                     </section> 
                 </div>
             </a>
@@ -37,9 +37,9 @@
             <a class=a-blog href="blog/blog1.html">
                 <div id="maindivar1-blog"> 
                     <section class="blog-section">
-                        <h3>Pagina de pruebas de layout</h3>
+                        <h3 class="titulo-text">Pagina de pruebas de layout</h3>
                         <img src="../img/blog/blog1/foto-test.jpg" alt="">
-                        <p>Esta es la pagina donde he probado todos los cambios de layout general</p>
+                        <p class="text">Esta es la pagina donde he probado todos los cambios de layout general</p>
                     </section> 
                 </div>
             </a>
