--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </button>
         </div>
         <article id="index-art">
-            <h3 class="titulo-text-main" >Distintas cosas en las que estoy trabajando</h3>
+            <h3 class="titulo-text" >Distintas cosas en las que estoy trabajando</h3>
                 <ul>
                     <li> <p  class="text-main"> Mejorar la pagina web </p></li>
                 </ul>
