--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <article id="index-art">
             <h3 class="titulo-text" >Distintas cosas en las que estoy trabajando</h3>
                 <ul>
-                    <li> <p  class="text-main"> Mejorar la pagina web </p></li>
+                    <li> <p  class="text"> Mejorar la pagina web </p></li>
                 </ul>
                 <a href="https://github.com/juanNH/Web-personal" target="_blank"><img src="img/icons/github-brands.svg" alt="">Repositorio</a>
         </article>
