nav bar solved, width max

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -14,11 +14,10 @@
 <body>
     <nav class="nav-pc" id="navi">
         <a href="../index.html" class="active">Inicio</a>
-        <a href="proyectos.html" class="resto hidden-noresponsive">Proyectos</a>
-        <a href="contacto.html" class="resto" >Contacto</a>
-        <a href="acerca_de_mi.html" class="resto">Sobre mi</a>
+        <a href="proyectos.html" class="resto ">Proyectos</a>
         <a href="blog.html" class="resto" >Blog</a>
-        <a href="proyectos.html" class="resto hidden-responsive" >Proyectos</a>
+        <a href="acerca_de_mi.html" class="resto">Sobre mi</a>
+        <a href="contacto.html" class="resto" >Contacto</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="menu" onclick="myFunction()">&#9776;</a>
     </nav>
     <header>
