blog 3 cortes, contacto solved

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -25,7 +25,7 @@
     </header>
     <!--fin header-->
     <main>
-        <div id="maindivar1">
+        <div id="contform">
             <article class="article-contacto">
                 <form action="" method="post">
                     <div class="formulario">
@@ -50,7 +50,7 @@
                 </form>
             </article>
         </div>
-        <div id="maindivar2">
+        <div id="contredes">
             <article class="article-contacto" id="article-contacto-redes">
                 <h2>Tambien puedes encontrarme en mis redes sociales</h2>
                 <ul>
