--- a/html/blog.html
+++ b/html/blog.html
@@ -20,10 +20,10 @@
     <header>
         <h1 class="titulo">Blog</h1>
     </header> <!--fin header-->
-    <main>
+    <main id="mmain-blog">
         <div id="cont-blog">
             <a class=a-blog href="blog/blog1.html">
-                <div id="maindivar1-blog"> 
+                <div class="maindivar1-blog"> 
                     <section class="blog-section">
                         <h3 class="titulo-text">Pagina de pruebas de layout</h3>
                         <img src="../img/blog/blog1/foto-test.jpg" alt="">
@@ -34,7 +34,19 @@
         </div>
         <div id="cont-blog">
             <a class=a-blog href="blog/blog1.html">
-                <div id="maindivar1-blog"> 
+                <div class="maindivar1-blog"> 
+                    <section class="blog-section">
+                        <h3 class="titulo-text">Pagina de pruebas de layout</h3>
+                        <img src="../img/blog/blog1/foto-test.jpg" alt="">
+                        <p class="text">Esta es la pagina donde he probado todos los cambios de layout general</p>
+                    </section> 
+                </div>
+            </a>
+        </div>
+
+        <div id="cont-blog">
+            <a class=a-blog href="blog/blog1.html">
+                <div class="maindivar1-blog"> 
                     <section class="blog-section">
                         <h3 class="titulo-text">Pagina de pruebas de layout</h3>
                         <img src="../img/blog/blog1/foto-test.jpg" alt="">
