font-size blog section solved for Mobile and tablet

--- a/html/blog.html
+++ b/html/blog.html
@@ -23,7 +23,7 @@
     <main id="mmain-blog">
         <div id="cont-blog">
             <a class=a-blog href="blog/blog1.html">
-                <div class="maindivar1-blog"> 
+                <div class="cajas-blog"> 
                     <section class="blog-section">
                         <h3 class="titulo-text">Pagina de pruebas de layout</h3>
                         <img src="../img/blog/blog1/foto-test.jpg" alt="">
@@ -34,7 +34,7 @@
         </div>
         <div id="cont-blog">
             <a class=a-blog href="blog/blog1.html">
-                <div class="maindivar1-blog"> 
+                <div class="cajas-blog"> 
                     <section class="blog-section">
                         <h3 class="titulo-text">Pagina de pruebas de layout</h3>
                         <img src="../img/blog/blog1/foto-test.jpg" alt="">
@@ -46,7 +46,7 @@
 
         <div id="cont-blog">
             <a class=a-blog href="blog/blog1.html">
-                <div class="maindivar1-blog"> 
+                <div class="cajas-blog"> 
                     <section class="blog-section">
                         <h3 class="titulo-text">Pagina de pruebas de layout</h3>
                         <img src="../img/blog/blog1/foto-test.jpg" alt="">
