--- a/html/contacto.html
+++ b/html/contacto.html
@@ -25,6 +25,11 @@
     </header>
     <!--fin header-->
     <main>
+        <div>
+            <article class="articlea">
+                <p class="text">No sientas timidez para enviarme un mensaje de cualquier tema para charlar o simplemente saludar. Te responderé ¡tan pronto como pueda!</p>
+            </article>
+        </div>
         <div id="contform">
             <article class="article-contacto">
                 <form action="" method="post">
