--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -42,24 +41,17 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/slider/test1.jpg" class="d-block w-100" alt="...">
+                <img src="img/slider/jspractice.PNG" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>test1</h5>
-                  <p>test1</p>
+                  <h5 class="C-negro">Practica JS</h5>
+                  <p class="C-negro">Aprender Java Script</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/slider/test2.jpg" class="d-block w-100" alt="...">
+                <img src="img/slider/gitk.PNG" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>test2</h5>
-                  <p>test2</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="img/slider/test2.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>test3</h5>
-                  <p>test3</p>
+                  <h5>Git</h5>
+                  <p>Controles de versiones</p>
                 </div>
               </div>
             </div>
@@ -74,10 +66,17 @@
           </div>
         <article id="index-art">
             <h3 class="titulo-text" >Distintas cosas en las que estoy trabajando</h3>
-                <ul>
+              <ul>
                     <li> <p  class="text"> Mejorar la pagina web </p></li>
-                </ul>
-                <a href="https://github.com/juanNH/Web-personal" target="_blank"><img src="img/icons/github-brands.svg" alt="">Repositorio</a>
+              </ul>
+              <ul>
+                <li> <p  class="text"> 
+                  Aprender Java Script para poder aprender algún frame work y migrar la pagina en un futuro </p></li>
+              </ul>
+              <ul>
+                <li> <p  class="text"> Mantener un registro de versiones mediante Git con la app de GitKraken  </p></li>
+              </ul>
+            <a href="https://github.com/juanNH/Web-personal" target="_blank"><img src="img/icons/github-brands.svg" alt="">Repositorio</a>
         </article>
     </main>
 
